--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "base-ddd": "^1.7.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "firebase-admin": "^9.10.0",
+    "fireorm": "^0.22.0",
     "graphql": "^15.5.1",
     "graphql-tools": "^7.0.5",
     "reflect-metadata": "^0.1.13",
