--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-proyect",
+  "name": "my-project",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -29,7 +29,7 @@
     "@nestjs/graphql": "^7.11.0",
     "@nestjs/platform-express": "^7.6.15",
     "apollo-server-express": "^2.25.2",
-    "base-ddd": "^1.8.0",
+    "base-ddd": "^1.9.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "firebase-admin": "^9.10.0",
