--- a/config-cli/product.yml
+++ b/config-cli/product.yml
@@ -5,3 +5,8 @@ name: Product
 properties:
   id: id
   name: string
+  code: uuid
+  description: string
+  createAt: date
+  price: number
+  category: [cat1, cat2]
