--- a/package.json
+++ b/package.json
@@ -21,44 +21,45 @@
     "test:e2e": "jest --runInBand --verbose --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/cqrs": "^8.0.0",
-    "@nestjs/graphql": "^8.0.2",
-    "@nestjs/platform-express": "^8.0.0",
-    "apollo-server-express": "^2.25.2",
+    "@nestjs/apollo": "^10.0.9",
+    "@nestjs/common": "^8.4.4",
+    "@nestjs/core": "^8.4.4",
+    "@nestjs/cqrs": "^8.0.3",
+    "@nestjs/graphql": "^10.0.9",
+    "@nestjs/platform-express": "^8.4.4",
+    "apollo-server-express": "^3.6.7",
     "base-ddd": "^1.14.3",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "firebase-admin": "^9.11.0",
-    "graphql": "^15.5.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "firebase-admin": "^10.0.2",
+    "graphql": "^16.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@faker-js/faker": "^6.1.2",
+    "@nestjs/cli": "^8.2.5",
+    "@nestjs/schematics": "^8.0.10",
+    "@nestjs/testing": "^8.4.4",
     "@types/express": "^4.17.13",
-    "@types/faker": "^5.5.7",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "faker": "^5.5.3",
-    "jest": "27.0.6",
-    "prettier": "^2.3.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "@types/faker": "^6.6.9",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.25",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.6.2",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.4",
+    "ts-loader": "^9.2.8",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.1",
+    "typescript": "^4.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
