--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
     "@nestjs/cqrs": "^8.0.3",
     "@nestjs/graphql": "^10.0.9",
     "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.6.7",
     "base-ddd": "^1.14.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "firebase-admin": "^10.0.2",
     "graphql": "^16.3.0",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
