--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --runInBand --verbose --config ./test/jest-e2e.json",
-    "cucumber": "cucumber-js"
+    "bdd": "cucumber-js --config cucumber.json"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.0.9",
