--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --runInBand --verbose --config ./test/jest-e2e.json",
-    "bdd": "cucumber-js --config cucumber.json"
+    "bdd": "cucumber-js -p default"
   },
   "dependencies": {
     "@nestjs/apollo": "^10.0.9",
@@ -42,11 +42,13 @@
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
-    "@cucumber/cucumber": "^8.0.0",
+    "@cucumber/cucumber": "^8.1.2",
     "@faker-js/faker": "^6.1.2",
     "@nestjs/cli": "^8.2.5",
     "@nestjs/schematics": "^8.0.10",
     "@nestjs/testing": "^8.4.4",
+    "@types/chai": "^4.3.1",
+    "@types/cucumber": "^7.0.0",
     "@types/express": "^4.17.13",
     "@types/faker": "^6.6.9",
     "@types/jest": "^27.4.1",
@@ -54,10 +56,13 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "chai": "^4.3.6",
+    "cucumber-tsflow": "^4.0.0-preview.7",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
+    "pactum": "^3.1.6",
     "prettier": "^2.6.2",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.4",
