--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@nestjs/graphql": "^10.0.9",
     "@nestjs/platform-express": "^8.4.4",
     "apollo-server-express": "^3.6.7",
-    "base-ddd": "^1.14.3",
+    "base-ddd": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "firebase-admin": "^10.0.2",
@@ -37,8 +37,7 @@
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.5",
-    "typeorm": "^0.3.6"
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
     "@cucumber/cucumber": "^8.1.2",
